--- a/src/view/DatBanKhachVangLaiManager.fxml
+++ b/src/view/DatBanKhachVangLaiManager.fxml
@@ -1,94 +1,240 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="610.0" prefWidth="1274.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DatBanKhachVangLaiController">
+<AnchorPane prefHeight="678.0" prefWidth="1274.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DatBanKhachVangLaiController">
    <children>
-      <Label layoutX="30.0" layoutY="68.0" prefHeight="17.0" prefWidth="118.0" text="Tên khách hàng" />
-      <TextField fx:id="txtTenKhachHang" layoutX="128.0" layoutY="64.0" prefHeight="25.0" prefWidth="197.0" />
-      <Label layoutX="30.0" layoutY="135.0" text="Địa chỉ" />
-      <TextField fx:id="txtDiaChi" layoutX="128.0" layoutY="131.0" prefHeight="25.0" prefWidth="439.0" />
-      <TextField fx:id="txtSoCMND" layoutX="417.0" layoutY="64.0" />
-      <TextField fx:id="txtSoDT" layoutX="128.0" layoutY="98.0" prefHeight="25.0" prefWidth="197.0" />
-      <Label layoutX="30.0" layoutY="102.0" text="Số điện thoại" />
-      <Label layoutX="346.0" layoutY="68.0" text="Số CMND" />
-      <CheckBox fx:id="cbCoTaiKhoan" layoutX="30.0" layoutY="170.0" mnemonicParsing="false" onAction="#coTaiKhoanChange" prefHeight="17.0" prefWidth="281.0" text="Nếu người dùng có tài khoản khách hàng:" />
-      <TextField fx:id="txtMaKH" layoutX="411.0" layoutY="166.0" prefHeight="25.0" prefWidth="156.0" />
-      <Label layoutX="359.0" layoutY="170.0" text="Mã KH" />
-      <Label layoutX="26.0" layoutY="221.0" text="Chọn 1 bàn ăn trong danh sách này" />
-      <Separator layoutX="26.0" layoutY="205.0" prefHeight="8.0" prefWidth="549.0" />
-      <Separator layoutX="575.0" layoutY="31.0" orientation="VERTICAL" prefHeight="554.0" prefWidth="6.0" />
-      <Label layoutX="586.0" layoutY="115.0" text="Tìm kiếm món ăn" />
-      <Label layoutX="948.0" layoutY="116.0" text="Các món đã chọn" />
-      <Button fx:id="btnThemMonAn" layoutX="615.0" layoutY="481.0" mnemonicParsing="false" onAction="#themMonVaoDS" prefHeight="25.0" prefWidth="244.0" text="Thêm vào danh sách món muốn đặt" />
-      <Button fx:id="btnXoaMonAn" layoutX="1017.0" layoutY="481.0" mnemonicParsing="false" onAction="#xoaMonKhoiDS" prefHeight="25.0" prefWidth="171.0" text="Xóa món đang chọn" />
-      <Button fx:id="btnThanhToan" layoutX="732.0" layoutY="530.0" mnemonicParsing="false" onAction="#thanhToan" prefHeight="47.0" prefWidth="197.0" text="Lưu thông tin bàn đặt" textAlignment="CENTER" wrapText="true">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Button fx:id="btnHuy" layoutX="971.0" layoutY="541.0" mnemonicParsing="false" onAction="#dongGiaoDien" prefHeight="25.0" prefWidth="70.0" text="Hủy" />
-      <Label layoutX="30.0" layoutY="18.0" text="Đặt bàn cho khách vãng lai">
+      <Label layoutX="30.0" layoutY="78.0" prefHeight="27.0" prefWidth="156.0" text="Tên khách hàng">
          <font>
             <Font size="18.0" />
+         </font></Label>
+      <TextField fx:id="txtTenKhachHang" layoutX="159.0" layoutY="74.0" prefHeight="39.0" prefWidth="407.0">
+         <font>
+            <Font size="18.0" />
+         </font></TextField>
+      <Label layoutX="30.0" layoutY="177.0" text="Địa chỉ">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <TextField fx:id="txtDiaChi" layoutX="160.0" layoutY="171.0" prefHeight="39.0" prefWidth="407.0">
+         <font>
+            <Font size="18.0" />
+         </font></TextField>
+      <TextField fx:id="txtSoCMND" layoutX="417.0" layoutY="123.0" prefHeight="31.0" prefWidth="149.0">
+         <font>
+            <Font size="18.0" />
+         </font></TextField>
+      <TextField fx:id="txtSoDT" layoutX="161.0" layoutY="122.0" prefHeight="39.0" prefWidth="171.0">
+         <font>
+            <Font size="18.0" />
+         </font></TextField>
+      <Label layoutX="30.0" layoutY="129.0" text="Số điện thoại">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="336.0" layoutY="128.0" text="Số CMND">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <CheckBox fx:id="cbCoTaiKhoan" layoutX="30.0" layoutY="233.0" mnemonicParsing="false" onAction="#coTaiKhoanChange" prefHeight="27.0" prefWidth="283.0" text="Nếu người dùng có tài khoản">
+         <font>
+            <Font size="18.0" />
+         </font></CheckBox>
+      <TextField fx:id="txtMaKH" layoutX="411.0" layoutY="226.0" prefHeight="25.0" prefWidth="156.0">
+         <font>
+            <Font size="18.0" />
+         </font></TextField>
+      <Label layoutX="349.0" layoutY="233.0" text="Mã KH">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="153.0" layoutY="284.0" text="Chọn 1 bàn ăn trong danh sách">
+         <font>
+            <Font size="20.0" />
+         </font></Label>
+      <Separator layoutX="26.0" layoutY="265.0" prefHeight="8.0" prefWidth="549.0" />
+      <Separator layoutX="575.0" layoutY="31.0" orientation="VERTICAL" prefHeight="632.0" prefWidth="3.0" AnchorPane.bottomAnchor="15.0" AnchorPane.topAnchor="30.0" />
+      <BorderPane layoutX="585.0" layoutY="112.0" prefHeight="509.0" prefWidth="779.0" AnchorPane.bottomAnchor="57.0" AnchorPane.leftAnchor="585.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="112.0">
+         <center>
+            <SplitPane dividerPositions="0.5, 0.5" BorderPane.alignment="TOP_CENTER">
+               <BorderPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </BorderPane.margin>
+               <items>
+                  <AnchorPane>
+                     <children>
+                        <TableView fx:id="lvMonAnDangBan" layoutY="71.0" prefHeight="303.0" prefWidth="392.0" AnchorPane.bottomAnchor="46.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="71.0">
+                          <columns>
+                            <TableColumn fx:id="tenMon" prefWidth="100.0" text="Tên món" />
+                            <TableColumn fx:id="soLuongNguoi" prefWidth="106.0" text="Số người ăn" />
+                              <TableColumn fx:id="donGia" prefWidth="88.0" text="Đơn giá" />
+                          </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
+                        <TilePane alignment="CENTER" layoutY="289.0" prefHeight="39.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                           <children>
+                              <Button fx:id="btnThemMonAn" mnemonicParsing="false" onAction="#themMonVaoDS" prefHeight="39.0" prefWidth="307.0" text="Thêm vào danh sách món chọn">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Button>
+                           </children>
+                        </TilePane>
+                        <Label text="Tìm kiếm món ăn">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="txtMonAnSearch" layoutY="30.0" prefHeight="39.0" prefWidth="189.0">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </TextField>
+                        <Button fx:id="btnTimMon" layoutX="193.0" layoutY="30.0" mnemonicParsing="false" onAction="#timMon" prefHeight="39.0" prefWidth="70.0" text="Tìm">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="btnShowAllMon" layoutX="265.0" layoutY="30.0" mnemonicParsing="false" onAction="#showAll" prefHeight="39.0" prefWidth="127.0" text="Hiện tất cả">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </AnchorPane>
+                  <FlowPane alignment="CENTER" prefHeight="283.0" prefWidth="0.0" SplitPane.resizableWithParent="false">
+                     <children>
+                        <Pane>
+                           <children>
+                              <Button fx:id="btnAddMon" mnemonicParsing="false" onAction="#themMonVaoDS" prefHeight="27.0" prefWidth="41.0">
+                                 <graphic>
+                                    <FontAwesomeIconView glyphName="CHEVRON_RIGHT" />
+                                 </graphic>
+                              </Button>
+                              <Button fx:id="btnRemoveMon" layoutY="36.0" mnemonicParsing="false" onAction="#xoaMonKhoiDS" prefHeight="27.0" prefWidth="41.0">
+                                 <graphic>
+                                    <FontAwesomeIconView glyphName="CHEVRON_LEFT" />
+                                 </graphic>
+                              </Button>
+                           </children>
+                           <FlowPane.margin>
+                              <Insets />
+                           </FlowPane.margin>
+                        </Pane>
+                     </children>
+                  </FlowPane>
+                  <AnchorPane>
+                     <children>
+                        <TableView fx:id="lvMonAnDaChon" layoutY="73.0" prefHeight="303.0" prefWidth="307.0" AnchorPane.bottomAnchor="46.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="71.0">
+                          <columns>
+                            <TableColumn fx:id="tenMonChon" prefWidth="129.0" text="Tên món" />
+                            <TableColumn fx:id="donGiaMua" prefWidth="90.0" text="Đơn giá" />
+                              <TableColumn fx:id="soLuongDat" prefWidth="79.0" text="Số lượng đặt" />
+                          </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
+                        <TilePane alignment="CENTER" layoutY="380.0" prefWidth="306.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                           <children>
+                              <Button fx:id="btnXoaMonAn" mnemonicParsing="false" onAction="#xoaMonKhoiDS" prefHeight="39.0" prefWidth="189.0" text="Xóa món đang chọn">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Button>
+                           </children>
+                        </TilePane>
+                        <TilePane alignment="CENTER" layoutY="40.0" prefHeight="27.0" prefWidth="308.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                           <children>
+                              <Label contentDisplay="CENTER" prefHeight="27.0" prefWidth="140.0" text="Các món đã chọn" textAlignment="CENTER">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </TilePane>
+                     </children>
+                  </AnchorPane>
+               </items>
+            </SplitPane>
+         </center>
+         <bottom>
+            <TilePane alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="47.0" prefWidth="673.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Button fx:id="btnThanhToan" mnemonicParsing="false" onAction="#thanhToan" prefHeight="47.0" prefWidth="205.0" text="Lưu thông tin bàn đặt" textAlignment="CENTER" wrapText="true">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="btnHuy" mnemonicParsing="false" onAction="#dongGiaoDien" prefHeight="47.0" prefWidth="70.0" text="Hủy">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+               </children>
+               <BorderPane.margin>
+                  <Insets top="20.0" />
+               </BorderPane.margin>
+            </TilePane>
+         </bottom>
+      </BorderPane>
+      <Label layoutX="30.0" layoutY="18.0" text="Đặt bàn cho khách hàng">
+         <font>
+            <Font size="25.0" />
          </font>
       </Label>
-      <TableView fx:id="lvBanAn" layoutX="27.0" layoutY="252.0" prefHeight="332.0" prefWidth="543.0">
+      <TableView fx:id="lvBanAn" layoutX="27.0" layoutY="363.0" prefHeight="301.0" prefWidth="543.0" AnchorPane.bottomAnchor="15.0" AnchorPane.topAnchor="360.0">
         <columns>
           <TableColumn fx:id="kySoBA" prefWidth="93.0" text="Ký số bàn ăn" />
           <TableColumn fx:id="soGhe" prefWidth="71.99996948242188" text="Số ghế" />
             <TableColumn fx:id="moTaBA" minWidth="0.0" prefWidth="265.0000305175781" text="Mô tả" />
             <TableColumn fx:id="phuGia" prefWidth="98.0" text="Phụ giá" />
         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
-      <TableView fx:id="lvMonAnDangBan" layoutX="586.0" layoutY="179.0" prefHeight="301.0" prefWidth="307.0">
-        <columns>
-          <TableColumn fx:id="tenMon" prefWidth="100.0" text="Tên món" />
-          <TableColumn fx:id="soLuongNguoi" prefWidth="106.0" text="Số lượng người" />
-            <TableColumn fx:id="donGia" prefWidth="88.0" text="Đơn giá" />
-        </columns>
-      </TableView>
-      <TableView fx:id="lvMonAnDaChon" layoutX="947.0" layoutY="147.0" prefHeight="332.0" prefWidth="307.0">
-        <columns>
-          <TableColumn fx:id="tenMonChon" prefWidth="129.0" text="Tên món" />
-          <TableColumn fx:id="donGiaMua" prefWidth="90.0" text="Đơn giá" />
-            <TableColumn fx:id="soLuongDat" prefWidth="79.0" text="Số lượng đặt" />
-        </columns>
-      </TableView>
-      <TextField fx:id="txtMonAnSearch" layoutX="586.0" layoutY="148.0" prefHeight="25.0" prefWidth="156.0" />
-      <Button fx:id="btnTimMon" layoutX="746.0" layoutY="148.0" mnemonicParsing="false" onAction="#timMon" prefHeight="25.0" prefWidth="53.0" text="Tìm" />
-      <Button fx:id="btnShowAllMon" layoutX="801.0" layoutY="148.0" mnemonicParsing="false" onAction="#showAll" prefHeight="25.0" prefWidth="92.0" text="Hiện tất cả" />
-      <TextField fx:id="txtBanAnSearch" layoutX="222.0" layoutY="219.0" prefHeight="25.0" prefWidth="189.0" />
-      <Button fx:id="btnTimBan" layoutX="416.0" layoutY="219.0" mnemonicParsing="false" onAction="#timBan" prefHeight="25.0" prefWidth="53.0" text="Tìm" />
-      <Button fx:id="btnShowAllBan" layoutX="470.0" layoutY="219.0" mnemonicParsing="false" onAction="#showAll" prefHeight="25.0" prefWidth="100.0" text="Hiện tất cả" />
-      <Button fx:id="btnAddMon" layoutX="900.0" layoutY="297.0" mnemonicParsing="false" onAction="#themMonVaoDS" prefHeight="27.0" prefWidth="41.0">
-         <graphic>
-            <FontAwesomeIconView glyphName="CHEVRON_RIGHT" />
-         </graphic>
-      </Button>
-      <Button fx:id="btnRemoveMon" layoutX="900.0" layoutY="333.0" mnemonicParsing="false" onAction="#xoaMonKhoiDS" prefHeight="27.0" prefWidth="41.0">
-         <graphic>
-            <FontAwesomeIconView glyphName="CHEVRON_LEFT" />
-         </graphic>
-      </Button>
-      <CheckBox fx:id="cbDatTruoc" layoutX="596.0" layoutY="76.0" mnemonicParsing="false" onAction="#coDatTruoc" text="Khách hàng đặt trước" />
-      <DatePicker fx:id="dpNgayDatBan" layoutX="965.0" layoutY="72.0" prefHeight="25.0" prefWidth="215.0" />
-      <Label layoutX="596.0" layoutY="23.0" prefHeight="47.0" prefWidth="648.0" text="Nếu là khách hàng đặt bàn trước, chọn checkbox và nhập giờ và ngày phục vụ (ngày khách đén ăn). Nếu không thì hiểu là đặt giữ chỗ cho khách đang vào ăn" wrapText="true">
+      <TextField fx:id="txtBanAnSearch" layoutX="27.0" layoutY="317.0" prefHeight="39.0" prefWidth="344.0">
          <font>
-            <Font name="System Italic" size="12.0" />
+            <Font size="18.0" />
+         </font></TextField>
+      <Button fx:id="btnTimBan" layoutX="376.0" layoutY="317.0" mnemonicParsing="false" onAction="#timBan" prefHeight="39.0" prefWidth="63.0" text="Tìm">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
+      <Button fx:id="btnShowAllBan" layoutX="443.0" layoutY="317.0" mnemonicParsing="false" onAction="#showAll" prefHeight="39.0" prefWidth="127.0" text="Hiện tất cả">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
+      <CheckBox fx:id="cbDatTruoc" layoutX="596.0" layoutY="76.0" mnemonicParsing="false" onAction="#coDatTruoc" text="Khách hàng đặt trước">
+         <font>
+            <Font size="18.0" />
+         </font></CheckBox>
+      <DatePicker fx:id="dpNgayDatBan" layoutX="1005.0" layoutY="72.0" prefHeight="25.0" prefWidth="215.0" />
+      <Label layoutX="596.0" layoutY="23.0" prefHeight="47.0" prefWidth="656.0" text="Nếu là khách hàng đặt bàn trước, chọn checkbox và nhập giờ và ngày phục vụ (ngày khách đến ăn). Nếu không thì hiểu là đặt giữ chỗ cho khách đang vào ăn" wrapText="true">
+         <font>
+            <Font name="System Italic" size="15.0" />
          </font>
       </Label>
-      <ComboBox fx:id="cmbGioDat" layoutX="769.0" layoutY="73.0" prefHeight="25.0" prefWidth="189.0" />
+      <ComboBox fx:id="cmbGioDat" layoutX="809.0" layoutY="73.0" prefHeight="25.0" prefWidth="189.0" />
    </children>
 </AnchorPane>
