--- a/src/view/ItemBanDatDetail.fxml
+++ b/src/view/ItemBanDatDetail.fxml
@@ -44,38 +44,38 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label fx:id="lblNgayDat" layoutX="530.0" layoutY="50.0" prefHeight="53.0" prefWidth="44.0" text="06" textFill="#6f6d6d">
+            <Label fx:id="lblNgayDat" layoutX="544.0" layoutY="48.0" prefHeight="27.0" prefWidth="27.0" text="06" textFill="#6f6d6d">
                <font>
-                  <Font size="36.0" />
+                  <Font size="24.0" />
                </font>
             </Label>
-            <Label fx:id="lblThangDat" layoutX="574.0" layoutY="51.0" prefHeight="27.0" prefWidth="72.0" text="THÁNG 4" textFill="#6f6d6d">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label fx:id="lblNamDat" layoutX="590.0" layoutY="70.0" prefHeight="27.0" prefWidth="44.0" text="2020" textFill="#6f6d6d">
+            <Label fx:id="lblThangDat" layoutX="574.0" layoutY="54.0" prefHeight="27.0" prefWidth="72.0" text="THÁNG 4" textFill="#6f6d6d">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Separator layoutX="642.0" layoutY="32.0" orientation="VERTICAL" prefHeight="59.0" prefWidth="12.0" />
+            <Label fx:id="lblNamDat" layoutX="590.0" layoutY="73.0" prefHeight="27.0" prefWidth="44.0" text="2020" textFill="#6f6d6d">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Separator layoutX="642.0" layoutY="32.0" orientation="VERTICAL" prefHeight="67.0" prefWidth="12.0" />
             <Label layoutX="653.0" layoutY="28.0" prefHeight="27.0" prefWidth="124.0" text="Ngày phục vụ" textFill="#6f6d6d">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label fx:id="lblNgayPhucVu" layoutX="654.0" layoutY="51.0" prefHeight="53.0" prefWidth="44.0" text="30" textFill="#6f6d6d">
+            <Label fx:id="lblNgayPhucVu" layoutX="667.0" layoutY="48.0" prefHeight="35.0" prefWidth="27.0" text="30" textFill="#6f6d6d">
                <font>
-                  <Font size="36.0" />
+                  <Font size="24.0" />
                </font>
             </Label>
-            <Label fx:id="lblThangPhucVu" layoutX="698.0" layoutY="52.0" prefHeight="27.0" prefWidth="72.0" text="THÁNG 4" textFill="#6f6d6d">
+            <Label fx:id="lblThangPhucVu" layoutX="698.0" layoutY="55.0" prefHeight="27.0" prefWidth="72.0" text="THÁNG 4" textFill="#6f6d6d">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label fx:id="lblNamPhucVu" layoutX="717.0" layoutY="71.0" prefHeight="27.0" prefWidth="44.0" text="2020" textFill="#6f6d6d">
+            <Label fx:id="lblNamPhucVu" layoutX="717.0" layoutY="74.0" prefHeight="27.0" prefWidth="44.0" text="2020" textFill="#6f6d6d">
                <font>
                   <Font size="14.0" />
                </font>
@@ -100,6 +100,8 @@
                   <Font size="18.0" />
                </font>
             </Label>
+            <Label fx:id="lblGioDat" layoutX="541.0" layoutY="74.0" prefHeight="27.0" prefWidth="44.0" text="12:30" />
+            <Label fx:id="lblGioPhucVu" layoutX="663.0" layoutY="77.0" text="17:00" />
          </children>
       </Pane>
       <Separator layoutX="35.0" layoutY="137.0" prefHeight="16.0" prefWidth="743.0" />
@@ -116,6 +118,9 @@
             <TableColumn fx:id="donGia" prefWidth="83.0" text="Đơn giá" />
             <TableColumn fx:id="tongGia" prefWidth="100.0" text="Tổng" />
         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
       <Label layoutX="47.0" layoutY="264.0" text="Thông tin món ăn">
          <font>
