--- a/src/view/QuanLyKhachHangManager.fxml
+++ b/src/view/QuanLyKhachHangManager.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -10,54 +11,115 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="610.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.QuanLyKhachHangController">
+<AnchorPane prefHeight="610.0" prefWidth="1231.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.QuanLyKhachHangController">
    <children>
-      <Label layoutX="30.0" layoutY="106.0" prefHeight="17.0" prefWidth="118.0" text="Mã khách hàng" />
-      <Label layoutX="30.0" layoutY="143.0" text="Họ tên" />
-      <Label layoutX="31.0" layoutY="181.0" text="Địa chỉ" />
+      <Label layoutX="30.0" layoutY="106.0" prefHeight="27.0" prefWidth="132.0" text="Mã khách hàng">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="30.0" layoutY="151.0" text="Họ tên">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="31.0" layoutY="194.0" text="Địa chỉ">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
       <Label layoutX="30.0" layoutY="18.0" text="Quản lý các khách hàng">
          <font>
-            <Font size="23.0" />
+            <Font size="25.0" />
          </font>
       </Label>
-      <TableView fx:id="lvKhachHang" layoutX="586.0" layoutY="81.0" prefHeight="477.0" prefWidth="578.0">
-        <columns>
-          <TableColumn fx:id="maKH" prefWidth="94.0" text="Mã khách hàng" />
-            <TableColumn fx:id="tenKH" prefWidth="230.0" text="Họ tên" />
-            <TableColumn fx:id="soCMND" prefWidth="106.0" text="Số CMND" />
-            <TableColumn fx:id="usernameKH" prefWidth="132.0" text="Username" />
-        </columns>
-      </TableView>
-      <TextField fx:id="txtMaKH" editable="false" layoutX="140.0" layoutY="102.0" prefHeight="25.0" prefWidth="171.0" />
-      <Label layoutX="29.0" layoutY="286.0" text="Số CMND/CCCD" />
-      <Label layoutX="29.0" layoutY="328.0" text="Số điện thoại" />
-      <Label layoutX="29.0" layoutY="371.0" text="Email" />
-      <Label layoutX="29.0" layoutY="413.0" prefHeight="35.0" prefWidth="108.0" text="Username dùng để sử dụng trên web" wrapText="true" />
-      <TextField fx:id="txtTenKH" editable="false" layoutX="140.0" layoutY="139.0" prefHeight="25.0" prefWidth="328.0" />
-      <TextArea fx:id="txtDiaChi" editable="false" layoutX="140.0" layoutY="179.0" prefHeight="87.0" prefWidth="328.0" />
-      <TextField fx:id="txtSoCMND" editable="false" layoutX="140.0" layoutY="282.0" prefHeight="25.0" prefWidth="171.0" />
-      <TextField fx:id="txtSoDT" editable="false" layoutX="140.0" layoutY="325.0" prefHeight="25.0" prefWidth="171.0" />
-      <TextField fx:id="txtEmail" editable="false" layoutX="140.0" layoutY="367.0" prefHeight="25.0" prefWidth="328.0" />
-      <TextField fx:id="txtUsername" editable="false" layoutX="140.0" layoutY="418.0" prefHeight="25.0" prefWidth="328.0" />
-      <TextField fx:id="txtSearch" layoutX="731.0" layoutY="45.0" prefHeight="25.0" prefWidth="256.0" />
-      <Label layoutX="594.0" layoutY="49.0" prefHeight="17.0" prefWidth="137.0" text="Nhập tìm khách hàng" />
-      <Button fx:id="btnTim" layoutX="995.0" layoutY="45.0" mnemonicParsing="false" onAction="#timKhachHang" text="Tìm" />
+      <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="572.0" layoutY="81.0" prefHeight="477.0" prefWidth="700.0" AnchorPane.bottomAnchor="33.0" AnchorPane.leftAnchor="572.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="81.0">
+         <content>
+            <TableView fx:id="lvKhachHang" minHeight="477.0" minWidth="641.0" prefHeight="494.0" prefWidth="647.0">
+              <columns>
+                <TableColumn fx:id="maKH" prefWidth="94.0" text="Mã khách hàng" />
+                  <TableColumn fx:id="tenKH" prefWidth="230.0" text="Họ tên" />
+                  <TableColumn fx:id="soCMND" prefWidth="106.0" text="Số CMND" />
+                  <TableColumn fx:id="usernameKH" prefWidth="132.0" text="Username" />
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
+         </content>
+      </ScrollPane>
+      <TextField fx:id="txtMaKH" editable="false" layoutX="165.0" layoutY="102.0" prefHeight="25.0" prefWidth="171.0">
+         <font>
+            <Font size="18.0" />
+         </font></TextField>
+      <Label layoutX="29.0" layoutY="290.0" text="Số CMND/CCCD">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="29.0" layoutY="336.0" text="Số điện thoại">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="29.0" layoutY="385.0" text="Email">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="29.0" layoutY="423.0" prefHeight="35.0" prefWidth="108.0" text="Username" wrapText="true">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <TextField fx:id="txtTenKH" editable="false" layoutX="165.0" layoutY="147.0" prefHeight="25.0" prefWidth="328.0">
+         <font>
+            <Font size="18.0" />
+         </font></TextField>
+      <TextArea fx:id="txtDiaChi" editable="false" layoutX="165.0" layoutY="192.0" prefHeight="87.0" prefWidth="328.0">
+         <font>
+            <Font size="18.0" />
+         </font></TextArea>
+      <TextField fx:id="txtSoCMND" editable="false" layoutX="165.0" layoutY="286.0" prefHeight="25.0" prefWidth="171.0">
+         <font>
+            <Font size="18.0" />
+         </font></TextField>
+      <TextField fx:id="txtSoDT" editable="false" layoutX="165.0" layoutY="333.0" prefHeight="25.0" prefWidth="171.0">
+         <font>
+            <Font size="18.0" />
+         </font></TextField>
+      <TextField fx:id="txtEmail" editable="false" layoutX="165.0" layoutY="381.0" prefHeight="25.0" prefWidth="328.0">
+         <font>
+            <Font size="18.0" />
+         </font></TextField>
+      <TextField fx:id="txtUsername" editable="false" layoutX="165.0" layoutY="428.0" prefHeight="25.0" prefWidth="328.0">
+         <font>
+            <Font size="18.0" />
+         </font></TextField>
+      <TextField fx:id="txtSearch" layoutX="752.0" layoutY="38.0" prefHeight="39.0" prefWidth="220.0">
+         <font>
+            <Font size="18.0" />
+         </font></TextField>
+      <Label layoutX="574.0" layoutY="42.0" prefHeight="27.0" prefWidth="187.0" text="Nhập tìm khách hàng">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Button fx:id="btnTim" layoutX="976.0" layoutY="38.0" mnemonicParsing="false" onAction="#timKhachHang" text="Tìm">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
       <Label layoutX="30.0" layoutY="71.0" text="Chi tiết thông tin khách hàng">
          <font>
-            <Font name="System Italic" size="14.0" />
+            <Font name="System Italic" size="15.0" />
          </font>
       </Label>
-      <Button fx:id="btnReset" layoutX="1039.0" layoutY="45.0" mnemonicParsing="false" onAction="#resetDSKhachHang" text="Xóa trắng danh sách" />
-      <Separator layoutX="540.0" layoutY="43.0" orientation="VERTICAL" prefHeight="526.0" prefWidth="1.0" />
-      <Separator layoutX="19.0" layoutY="464.0" prefHeight="9.0" prefWidth="523.0" />
-      <Label layoutX="28.0" layoutY="473.0" text="Các chức năng">
+      <Button fx:id="btnReset" layoutX="1032.0" layoutY="38.0" mnemonicParsing="false" onAction="#resetDSKhachHang" prefHeight="39.0" prefWidth="187.0" text="Xóa trắng danh sách">
          <font>
-            <Font name="System Italic" size="14.0" />
+            <Font size="18.0" />
+         </font></Button>
+      <Separator layoutX="540.0" layoutY="43.0" orientation="VERTICAL" prefHeight="526.0" prefWidth="1.0" />
+      <Separator layoutX="19.0" layoutY="473.0" prefHeight="9.0" prefWidth="523.0" />
+      <Label layoutX="28.0" layoutY="479.0" text="Các chức năng">
+         <font>
+            <Font name="System Italic" size="15.0" />
          </font>
       </Label>
       <Button fx:id="btnThemKhachHang" layoutX="29.0" layoutY="508.0" mnemonicParsing="false" onAction="#taoKhachHangMoi" prefHeight="62.0" prefWidth="241.0" text="Thêm khách hàng mới" wrapText="true">
          <font>
-            <Font size="16.0" />
+            <Font size="18.0" />
          </font>
       </Button>
       <Button layoutX="295.0" layoutY="508.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="241.0" text="Xem thống kê doanh thu của khách hàng đang chọn" textAlignment="CENTER" visible="false" wrapText="true">
@@ -65,5 +127,6 @@
             <Font size="16.0" />
          </font>
       </Button>
+      <Label layoutX="30.0" layoutY="449.0" text="(sử dụng trên web)" />
    </children>
 </AnchorPane>
