--- a/src/view/ThemMonBanDatManager.fxml
+++ b/src/view/ThemMonBanDatManager.fxml
@@ -9,75 +9,105 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="610.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ThemMonBanDatController">
+<AnchorPane prefHeight="635.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ThemMonBanDatController">
    <children>
-      <Label layoutX="35.0" layoutY="67.0" text="Tìm kiếm món ăn" />
-      <Label layoutX="389.0" layoutY="68.0" text="Các món đã chọn" />
-      <Button fx:id="btnThemMonAn" layoutX="81.0" layoutY="436.0" mnemonicParsing="false" onAction="#themMonVaoDS" text="Thêm vào danh sách món muốn đặt" />
-      <Button fx:id="btnXoaMonAn" layoutX="473.0" layoutY="437.0" mnemonicParsing="false" onAction="#xoaMonKhoiDS" text="Xóa món đang chọn" />
-      <Label layoutX="34.0" layoutY="470.0" prefHeight="27.0" prefWidth="197.0" text="Tiền thanh toán thêm">
+      <Label layoutX="35.0" layoutY="67.0" text="Tìm kiếm món ăn">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="466.0" layoutY="111.0" text="Các món đã chọn">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Button fx:id="btnThemMonAn" layoutX="48.0" layoutY="438.0" mnemonicParsing="false" onAction="#themMonVaoDS" text="Thêm vào danh sách món chọn">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
+      <Button fx:id="btnXoaMonAn" layoutX="459.0" layoutY="439.0" mnemonicParsing="false" onAction="#xoaMonKhoiDS" text="Xóa món đang chọn">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
+      <Label layoutX="34.0" layoutY="498.0" prefHeight="27.0" prefWidth="197.0" text="Tiền thanh toán thêm">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label fx:id="lblTongTien" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="232.0" layoutY="470.0" prefHeight="27.0" prefWidth="156.0" text="500000 Đ">
+      <Label fx:id="lblTongTien" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="232.0" layoutY="498.0" prefHeight="27.0" prefWidth="156.0" text="500000 Đ">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="35.0" layoutY="496.0" prefHeight="51.0" prefWidth="207.0" text="Tiền khách đưa thêm (Bỏ qua nếu bàn chưa thanh toán)" wrapText="true">
+      <Label layoutX="35.0" layoutY="524.0" prefHeight="51.0" prefWidth="207.0" text="Tiền khách đưa thêm (Bỏ qua nếu bàn chưa thanh toán)" wrapText="true">
          <font>
             <Font size="13.0" />
          </font>
       </Label>
-      <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="375.0" layoutY="510.0" text="Đ" textAlignment="RIGHT">
+      <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="375.0" layoutY="538.0" text="Đ" textAlignment="RIGHT">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="txtTienKhachDua" alignment="CENTER_RIGHT" layoutX="250.0" layoutY="504.0" prefHeight="39.0" prefWidth="124.0">
+      <TextField fx:id="txtTienKhachDua" alignment="CENTER_RIGHT" layoutX="250.0" layoutY="532.0" prefHeight="39.0" prefWidth="124.0">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <Label layoutX="35.0" layoutY="545.0" prefHeight="39.0" prefWidth="207.0" text="Tiền thối lại (Bỏ qua nếu bàn chưa thanh toán)" wrapText="true">
+      <Label layoutX="35.0" layoutY="573.0" prefHeight="39.0" prefWidth="207.0" text="Tiền thối lại (Bỏ qua nếu bàn chưa thanh toán)" wrapText="true">
          <font>
             <Font size="13.0" />
          </font>
       </Label>
-      <Label fx:id="lblTienThoi" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="231.0" layoutY="552.0" prefHeight="27.0" prefWidth="156.0" text="100000 Đ">
+      <Label fx:id="lblTienThoi" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="231.0" layoutY="580.0" prefHeight="27.0" prefWidth="156.0" text="100000 Đ">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="btnThanhToan" layoutX="441.0" layoutY="476.0" mnemonicParsing="false" onAction="#thanhToan" prefHeight="69.0" prefWidth="197.0" text="Thêm món ăn cho bàn" textAlignment="CENTER" wrapText="true">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Button fx:id="btnHuy" layoutX="505.0" layoutY="553.0" mnemonicParsing="false" onAction="#dongGiaoDien" prefHeight="25.0" prefWidth="70.0" text="Hủy" />
-      <Label layoutX="35.0" layoutY="25.0" text="Thêm món cho bàn đang ăn">
+      <Button fx:id="btnThanhToan" layoutX="482.0" layoutY="504.0" mnemonicParsing="false" onAction="#thanhToan" prefHeight="69.0" prefWidth="149.0" text="Thêm món ăn cho bàn" textAlignment="CENTER" wrapText="true">
          <font>
             <Font size="18.0" />
+         </font>
+      </Button>
+      <Button fx:id="btnHuy" layoutX="524.0" layoutY="581.0" mnemonicParsing="false" onAction="#dongGiaoDien" prefHeight="25.0" prefWidth="70.0" text="Hủy">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
+      <Label layoutX="35.0" layoutY="25.0" text="Thêm món cho bàn đang ăn">
+         <font>
+            <Font size="25.0" />
          </font>
       </Label>
       <TableView fx:id="lvMonAnDangBan" layoutX="35.0" layoutY="146.0" prefHeight="286.0" prefWidth="295.0">
         <columns>
           <TableColumn fx:id="tenMon" prefWidth="100.0" text="Tên món" />
-          <TableColumn fx:id="soLuongNguoi" prefWidth="106.0" text="Số lượng người" />
+          <TableColumn fx:id="soLuongNguoi" prefWidth="106.0" text="Số người ăn" />
             <TableColumn fx:id="donGia" prefWidth="88.0" text="Đơn giá" />
         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
-      <TableView fx:id="lvMonAnDaChon" layoutX="388.0" layoutY="106.0" prefHeight="324.0" prefWidth="302.0">
+      <TableView fx:id="lvMonAnDaChon" layoutX="388.0" layoutY="144.0" prefHeight="286.0" prefWidth="302.0">
         <columns>
           <TableColumn fx:id="tenMonChon" prefWidth="129.0" text="Tên món" />
           <TableColumn fx:id="donGiaMua" prefWidth="90.0" text="Đơn giá" />
             <TableColumn fx:id="soLuongDat" prefWidth="79.0" text="Số lượng đặt" />
         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
-      <TextField fx:id="txtMonAnSearch" layoutX="35.0" layoutY="100.0" prefHeight="25.0" prefWidth="171.0" />
-      <Button fx:id="btnTimMon" layoutX="211.0" layoutY="100.0" mnemonicParsing="false" onAction="#timMon" text="Tìm" />
-      <Button fx:id="btnShowAllMon" layoutX="252.0" layoutY="100.0" mnemonicParsing="false" onAction="#showAll" text="Hiện tất cả" />
+      <TextField fx:id="txtMonAnSearch" layoutX="35.0" layoutY="100.0" prefHeight="25.0" prefWidth="171.0">
+         <font>
+            <Font size="18.0" />
+         </font></TextField>
+      <Button fx:id="btnTimMon" layoutX="211.0" layoutY="100.0" mnemonicParsing="false" onAction="#timMon" text="Tìm">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
+      <Button fx:id="btnShowAllMon" layoutX="268.0" layoutY="100.0" mnemonicParsing="false" onAction="#showAll" text="Hiện tất cả">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
       <Button fx:id="btnAddMon" layoutX="340.0" layoutY="250.0" mnemonicParsing="false" onAction="#themMonVaoDS" prefHeight="27.0" prefWidth="41.0">
          <graphic>
             <FontAwesomeIconView glyphName="CHEVRON_RIGHT" />
