--- a/src/view/ThongKeKhachHang.fxml
+++ b/src/view/ThongKeKhachHang.fxml
@@ -12,20 +12,35 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="686.0" prefWidth="1274.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ThongKeKhachHangController">
+<AnchorPane prefHeight="732.0" prefWidth="1310.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ThongKeKhachHangController">
    <children>
       <Label layoutX="29.0" layoutY="143.0" text="Hay tìm các bàn được đặt:" visible="false" />
-      <Label layoutX="718.0" layoutY="42.0" text="Doanh thu từ khách hàng" />
-      <Label fx:id="lblDoanhThuKH" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1092.0" layoutY="42.0" prefHeight="7.0" prefWidth="156.0" text="999.999.999.999 Đ" />
-      <Label layoutX="719.0" layoutY="93.0" text="Số lần hủy bàn" />
-      <Label layoutX="720.0" layoutY="170.0" prefHeight="17.0" prefWidth="149.0" text="Món ăn gọi nhiều nhất" />
-      <Button fx:id="btnDong" layoutX="1082.0" layoutY="635.0" mnemonicParsing="false" onAction="#dongGiaoDien" prefHeight="25.0" prefWidth="94.0" text="Đóng" textAlignment="CENTER" wrapText="true" />
-      <Label layoutX="30.0" layoutY="18.0" text="Thống kê doanh thu theo khách hàng">
+      <Label layoutX="718.0" layoutY="42.0" text="Doanh thu từ khách hàng">
          <font>
             <Font size="18.0" />
+         </font></Label>
+      <Label fx:id="lblDoanhThuKH" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1092.0" layoutY="42.0" prefHeight="7.0" prefWidth="156.0" text="0 Đ">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="719.0" layoutY="96.0" text="Số lần hủy bàn">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="720.0" layoutY="181.0" prefHeight="17.0" prefWidth="203.0" text="Món ăn gọi nhiều nhất">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Button fx:id="btnDong" layoutX="1082.0" layoutY="678.0" mnemonicParsing="false" onAction="#dongGiaoDien" prefHeight="25.0" prefWidth="94.0" text="Đóng" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
+      <Label layoutX="30.0" layoutY="18.0" text="Thống kê doanh thu theo khách hàng">
+         <font>
+            <Font size="25.0" />
          </font>
       </Label>
-      <TableView fx:id="lvKhachHang" layoutX="26.0" layoutY="52.0" prefHeight="581.0" prefWidth="662.0">
+      <TableView fx:id="lvKhachHang" layoutX="26.0" layoutY="74.0" prefHeight="604.0" prefWidth="662.0">
         <columns>
           <TableColumn fx:id="colMaKH" prefWidth="83.99996948242188" text="Mã KH" />
             <TableColumn fx:id="colTenKH" prefWidth="161.00003051757812" text="Họ tên" />
@@ -33,38 +48,122 @@
             <TableColumn fx:id="colSoDT" minWidth="0.0" prefWidth="119.0" text="Số ĐT" />
             <TableColumn fx:id="colTongDoanhThu" prefWidth="166.0" text="Tổng doanh thu" />
         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
-      <Label layoutX="719.0" layoutY="68.0" prefHeight="17.0" prefWidth="205.0" text="Số lần đặt bàn và đã thanh toán" wrapText="true" />
-      <Label layoutX="719.0" layoutY="118.0" prefHeight="17.0" prefWidth="205.0" text="Ngày đặt bàn đã thanh toán gần nhất" wrapText="true" />
-      <Button fx:id="btnThongKe" layoutX="383.0" layoutY="19.0" mnemonicParsing="false" onAction="#thongKeKhachHang" prefHeight="25.0" prefWidth="238.0" text="Thống kê doanh thu theo khách hàng" />
-      <Separator layoutX="694.0" layoutY="24.0" orientation="VERTICAL" prefHeight="649.0" prefWidth="0.0" />
-      <Label fx:id="lblNgayGanNhat" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1091.0" layoutY="118.0" prefHeight="17.0" prefWidth="156.0" text="31/12/2020" />
-      <Label fx:id="lblSoLanDat" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1091.0" layoutY="68.0" prefHeight="17.0" prefWidth="156.0" text="999.999.999" />
-      <Separator layoutX="16.0" layoutY="635.0" prefHeight="7.0" prefWidth="679.0" />
-      <ImageView fx:id="imgHinhAnhMA" fitHeight="143.0" fitWidth="200.0" layoutX="730.0" layoutY="275.0" pickOnBounds="true" preserveRatio="true" />
-      <Label layoutX="729.0" layoutY="209.0" text="Mã món ăn" />
-      <Label layoutX="988.0" layoutY="209.0" text="Tên món ăn" />
-      <Label layoutX="729.0" layoutY="239.0" text="Số người / phần" />
-      <Label layoutX="946.0" layoutY="275.0" text="Nguyên liệu" />
-      <Label layoutX="732.0" layoutY="428.0" text="Mô tả món ăn" />
-      <TextField fx:id="txtMaMA" editable="false" layoutX="823.0" layoutY="205.0" prefHeight="25.0" prefWidth="121.0" />
-      <TextField fx:id="txtTenMA" editable="false" layoutX="1060.0" layoutY="205.0" prefHeight="25.0" prefWidth="188.0" />
-      <TextField fx:id="txtSoNguoi" editable="false" layoutX="823.0" layoutY="235.0" prefHeight="25.0" prefWidth="121.0" />
-      <TextArea fx:id="txtNguyenLieu" editable="false" layoutX="947.0" layoutY="297.0" prefHeight="119.0" prefWidth="300.0" wrapText="true" />
-      <TextArea fx:id="txtMoTaMA" editable="false" layoutX="732.0" layoutY="451.0" prefHeight="80.0" prefWidth="515.0" wrapText="true" />
-      <Label layoutX="988.0" layoutY="239.0" text="Đơn giá hiện tại" />
-      <TextField fx:id="txtDonGia" editable="false" layoutX="1086.0" layoutY="235.0" />
-      <Label layoutX="1238.0" layoutY="239.0" text="Đ" />
-      <Button fx:id="btnXuatExcel" layoutX="1026.0" layoutY="603.0" mnemonicParsing="false" onAction="#xuatFileExcel" prefHeight="25.0" prefWidth="205.0" text="Xuất báo cáo ra file Excel" />
-      <Label fx:id="lblSoLanHuy" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1091.0" layoutY="93.0" prefHeight="17.0" prefWidth="156.0" text="999.999.999" />
-      <CheckBox fx:id="cbChiConBan" layoutX="894.0" layoutY="169.0" mnemonicParsing="false" onAction="#chiConBanChange" text="Chỉ trong các món còn bán" />
+      <Label layoutX="719.0" layoutY="70.0" prefHeight="27.0" prefWidth="294.0" text="Số lần đặt bàn và đã thanh toán" wrapText="true">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="719.0" layoutY="123.0" prefHeight="27.0" prefWidth="315.0" text="Ngày đặt bàn đã thanh toán gần nhất" wrapText="true">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Button fx:id="btnThongKe" layoutX="480.0" layoutY="17.0" mnemonicParsing="false" onAction="#thongKeKhachHang" prefHeight="39.0" prefWidth="195.0" text="Thống kê doanh thu">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
+      <Separator layoutX="689.0" layoutY="18.0" orientation="VERTICAL" prefHeight="708.0" prefWidth="11.0" />
+      <Label fx:id="lblNgayGanNhat" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1091.0" layoutY="123.0" prefHeight="17.0" prefWidth="156.0" text="01/01/2020">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label fx:id="lblSoLanDat" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1091.0" layoutY="70.0" prefHeight="17.0" prefWidth="156.0" text="0">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Separator layoutX="16.0" layoutY="686.0" prefHeight="7.0" prefWidth="679.0" />
+      <ImageView fx:id="imgHinhAnhMA" fitHeight="143.0" fitWidth="200.0" layoutX="730.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true" />
+      <Label layoutX="729.0" layoutY="225.0" text="Mã món ăn">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="958.0" layoutY="225.0" text="Tên món ăn">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="729.0" layoutY="277.0" text="Số người/phần">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="946.0" layoutY="320.0" text="Nguyên liệu">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="732.0" layoutY="467.0" text="Mô tả món ăn">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <TextField fx:id="txtMaMA" editable="false" layoutX="835.0" layoutY="221.0" prefHeight="25.0" prefWidth="121.0">
+         <font>
+            <Font size="18.0" />
+         </font></TextField>
+      <TextField fx:id="txtTenMA" editable="false" layoutX="1060.0" layoutY="221.0" prefHeight="25.0" prefWidth="188.0">
+         <font>
+            <Font size="18.0" />
+         </font></TextField>
+      <TextField fx:id="txtSoNguoi" editable="false" layoutX="854.0" layoutY="273.0" prefHeight="39.0" prefWidth="102.0">
+         <font>
+            <Font size="18.0" />
+         </font></TextField>
+      <TextArea fx:id="txtNguyenLieu" editable="false" layoutX="947.0" layoutY="347.0" prefHeight="119.0" prefWidth="300.0" wrapText="true">
+         <font>
+            <Font size="18.0" />
+         </font></TextArea>
+      <TextArea fx:id="txtMoTaMA" editable="false" layoutX="732.0" layoutY="491.0" prefHeight="80.0" prefWidth="515.0" wrapText="true">
+         <font>
+            <Font size="18.0" />
+         </font></TextArea>
+      <Label layoutX="958.0" layoutY="277.0" text="Đơn giá hiện tại">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <TextField fx:id="txtDonGia" editable="false" layoutX="1094.0" layoutY="273.0" prefHeight="39.0" prefWidth="156.0">
+         <font>
+            <Font size="18.0" />
+         </font></TextField>
+      <Label layoutX="1258.0" layoutY="289.0" text="Đ" />
+      <Button fx:id="btnXuatExcel" layoutX="998.0" layoutY="633.0" mnemonicParsing="false" onAction="#xuatFileExcel" prefHeight="39.0" prefWidth="233.0" text="Xuất báo cáo ra file Excel">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
+      <Label fx:id="lblSoLanHuy" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1091.0" layoutY="96.0" prefHeight="17.0" prefWidth="156.0" text="0">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <CheckBox fx:id="cbChiConBan" layoutX="905.0" layoutY="180.0" mnemonicParsing="false" onAction="#chiConBanChange" text="Chỉ trong các món còn bán">
+         <font>
+            <Font size="18.0" />
+         </font></CheckBox>
       <Button fx:id="btnXemChiTiet" layoutX="758.0" layoutY="603.0" mnemonicParsing="false" onAction="#xemChiTietKH" prefHeight="57.0" prefWidth="205.0" text="Xem chi tiết khách hàng này trong quản lý khách hàng" textAlignment="CENTER" visible="false" wrapText="true" />
-      <Label layoutX="29.0" layoutY="645.0" text="Tổng doanh thu" />
-      <Label fx:id="lblTongDoanhThu" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="151.0" layoutY="645.0" prefHeight="17.0" prefWidth="121.0" text="999.999.999.999 Đ" />
-      <Label layoutX="372.0" layoutY="645.0" text="Số lượng khách hàng" />
-      <Label fx:id="lblSoKhachHangUnique" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="502.0" layoutY="645.0" prefHeight="17.0" prefWidth="94.0" text="999999" />
-      <Label layoutX="720.0" layoutY="143.0" text="Doanh thu bàn gần nhất" />
-      <Label fx:id="lblDoanhThuKHGanNhat" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1092.0" layoutY="143.0" prefHeight="7.0" prefWidth="156.0" text="999.999.999.999 Đ" />
-      <Label fx:id="lblThongSoMonGanNhat" layoutX="733.0" layoutY="543.0" prefHeight="17.0" prefWidth="515.0" text="Đặt %d phần trong %d lần đặt bàn. Lần cuối đặt món này vào ngày dd/MM/yyyy" />
+      <Label layoutX="29.0" layoutY="699.0" text="Tổng doanh thu:">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label fx:id="lblTongDoanhThu" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="170.0" layoutY="699.0" prefHeight="27.0" prefWidth="156.0" text="0 Đ">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="372.0" layoutY="699.0" text="Số lượng khách hàng:">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label fx:id="lblSoKhachHangUnique" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="519.0" layoutY="699.0" prefHeight="17.0" prefWidth="94.0" text="0">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="720.0" layoutY="152.0" text="Doanh thu bàn gần nhất">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label fx:id="lblDoanhThuKHGanNhat" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1092.0" layoutY="152.0" prefHeight="7.0" prefWidth="156.0" text="0 Đ">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label fx:id="lblThongSoMonGanNhat" layoutX="733.0" layoutY="572.0" prefHeight="57.0" prefWidth="515.0" text="Đặt %d phần trong %d lần đặt bàn. Lần cuối đặt món này vào ngày dd/MM/yyyy" wrapText="true">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
    </children>
 </AnchorPane>
