--- a/src/view/ThongKeMonAn.fxml
+++ b/src/view/ThongKeMonAn.fxml
@@ -14,69 +14,72 @@
 
 <AnchorPane prefHeight="686.0" prefWidth="1274.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ThongKeMonAnController">
    <children>
-      <CheckBox fx:id="cbBaoGomChuaThanhToan" layoutX="30.0" layoutY="55.0" mnemonicParsing="false" onAction="#baoGomChuaThanhToanChange" prefHeight="17.0" prefWidth="320.0" text="Bao gồm các gọi món của các bàn đặt chưa thanh toán" />
+      <CheckBox fx:id="cbBaoGomChuaThanhToan" layoutX="30.0" layoutY="55.0" mnemonicParsing="false" onAction="#baoGomChuaThanhToanChange" prefHeight="21.0" prefWidth="420.0" text="Bao gồm các gọi món của các bàn đặt chưa thanh toán" />
       <Label layoutX="29.0" layoutY="143.0" text="Hay tìm các bàn được đặt:" visible="false" />
       <Label layoutX="768.0" layoutY="42.0" text="Doanh thu của món" />
-      <Label fx:id="lblTongDoanhThu" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1092.0" layoutY="42.0" prefHeight="7.0" prefWidth="156.0" text="999.999.999.999 Đ" />
+      <Label fx:id="lblTongDoanhThu" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1092.0" layoutY="42.0" prefHeight="7.0" prefWidth="156.0" text="0 Đ" />
       <Label layoutX="768.0" layoutY="119.0" text="Số phần được đặt và doanh thu theo xu hướng" />
-      <Label layoutX="793.0" layoutY="146.0" prefHeight="17.0" prefWidth="238.0" text="+ Từ hôm nay đến ngày thứ 7 trở về trước" />
-      <Label fx:id="lblSoPhanDD7" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1040.0" layoutY="146.0" prefHeight="17.0" prefWidth="78.0" text="99.999.999" />
+      <Label layoutX="768.0" layoutY="176.0" prefHeight="21.0" prefWidth="281.0" text="+ Từ hôm nay đến ngày thứ 7 trở về trước" />
+      <Label fx:id="lblSoPhanDD7" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1040.0" layoutY="176.0" prefHeight="17.0" prefWidth="78.0" text="0" />
       <Button fx:id="btnDong" layoutX="1166.0" layoutY="647.0" mnemonicParsing="false" onAction="#dongGiaoDien" prefHeight="25.0" prefWidth="94.0" text="Đóng" textAlignment="CENTER" wrapText="true" />
       <Label layoutX="30.0" layoutY="18.0" text="Thống kê thông tin về các món ăn đang bán">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <TableView fx:id="lvMonAn" layoutX="26.0" layoutY="125.0" prefHeight="278.0" prefWidth="708.0">
+      <TableView fx:id="lvMonAn" layoutX="26.0" layoutY="125.0" prefHeight="278.0" prefWidth="714.0">
         <columns>
           <TableColumn fx:id="colThuHang" prefWidth="82.0" text="Mã món ăn" />
             <TableColumn fx:id="colTenMA" prefWidth="163.0" text="Tên món" />
             <TableColumn fx:id="colSoNguoi" prefWidth="99.0" text="Số người/phần" />
             <TableColumn fx:id="colDonGia" minWidth="0.0" prefWidth="98.0" text="Đơn giá" />
-            <TableColumn fx:id="colSoPhanDD" prefWidth="108.0" text="Số phần được đặt" />
-            <TableColumn fx:id="colTongDoanhThu" prefWidth="141.0" text="Tổng doanh thu" />
+            <TableColumn fx:id="colSoPhanDD" prefWidth="134.0" text="Số phần đặt" />
+            <TableColumn fx:id="colTongDoanhThu" prefWidth="105.0" text="Tổng doanh thu" />
         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
-      <Label layoutX="768.0" layoutY="68.0" prefHeight="17.0" prefWidth="205.0" text="Số phần được đặt (từ trước đến nay)" wrapText="true" />
-      <Label layoutX="768.0" layoutY="93.0" prefHeight="17.0" prefWidth="205.0" text="Số bàn đặt món này (từ trước đến nay)" wrapText="true" />
-      <Button fx:id="btnThongKe" layoutX="371.0" layoutY="51.0" mnemonicParsing="false" onAction="#thongKeMonAn" prefHeight="25.0" prefWidth="171.0" text="Thống kê các món ăn" />
+      <Label layoutX="768.0" layoutY="68.0" prefHeight="21.0" prefWidth="268.0" text="Số phần được đặt (từ trước đến nay)" wrapText="true" />
+      <Label layoutX="768.0" layoutY="93.0" prefHeight="21.0" prefWidth="258.0" text="Số bàn đặt món này (từ trước đến nay)" wrapText="true" />
+      <Button fx:id="btnThongKe" layoutX="441.0" layoutY="51.0" mnemonicParsing="false" onAction="#thongKeMonAn" prefHeight="25.0" prefWidth="171.0" text="Thống kê các món ăn" />
       <Separator layoutX="748.0" layoutY="24.0" orientation="VERTICAL" prefHeight="649.0" prefWidth="0.0" />
-      <Label fx:id="lblSoBanDatMon" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1091.0" layoutY="92.0" prefHeight="17.0" prefWidth="156.0" text="999.999.999" />
-      <Label fx:id="lblSoPhanDD" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1091.0" layoutY="68.0" prefHeight="17.0" prefWidth="156.0" text="999.999.999" />
+      <Label fx:id="lblSoBanDatMon" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1091.0" layoutY="92.0" prefHeight="17.0" prefWidth="156.0" text="0" />
+      <Label fx:id="lblSoPhanDD" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1091.0" layoutY="68.0" prefHeight="17.0" prefWidth="156.0" text="0" />
       <Label layoutX="30.0" layoutY="81.0" prefHeight="39.0" prefWidth="708.0" text="Lưu ý: Đơn giá ở đây là giá hiện tại, do đơn giá món có thể thay đổi theo thời gian, tổng doanh thu được tính dựa trên dữ liệu giá của món của tất cả những lần đặt trước. Chọn món trong danh sách để xem thống kê chi tiết hơn" wrapText="true">
          <font>
             <Font name="System Italic" size="12.0" />
          </font>
       </Label>
       <Separator layoutX="16.0" layoutY="404.0" prefHeight="7.0" prefWidth="733.0" />
-      <Label layoutX="793.0" layoutY="169.0" prefHeight="17.0" prefWidth="238.0" text="+ Từ ngày thứ 8 đến 14 trở về trước" />
-      <Label layoutX="793.0" layoutY="191.0" prefHeight="17.0" prefWidth="238.0" text="+ Từ ngày thứ 15 đến 21 trở về trước" />
-      <Label layoutX="793.0" layoutY="214.0" prefHeight="17.0" prefWidth="238.0" text="+ Từ ngày thứ 22 đến 28 trở về trước" />
-      <Label fx:id="lblSoPhanDD14" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1040.0" layoutY="169.0" prefHeight="17.0" prefWidth="78.0" text="99.999.999" />
-      <Label fx:id="lblSoPhanDD21" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1040.0" layoutY="192.0" prefHeight="17.0" prefWidth="78.0" text="99.999.999" />
-      <Label fx:id="lblSoPhanDD28" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1040.0" layoutY="214.0" prefHeight="17.0" prefWidth="78.0" text="99.999.999" />
-      <Label layoutX="766.0" layoutY="248.0" text="Nhận xét xu hướng:" />
+      <Label layoutX="768.0" layoutY="199.0" prefHeight="17.0" prefWidth="238.0" text="+ Từ ngày thứ 8 đến 14 trở về trước" />
+      <Label layoutX="768.0" layoutY="221.0" prefHeight="21.0" prefWidth="248.0" text="+ Từ ngày thứ 15 đến 21 trở về trước" />
+      <Label layoutX="768.0" layoutY="244.0" prefHeight="21.0" prefWidth="248.0" text="+ Từ ngày thứ 22 đến 28 trở về trước" />
+      <Label fx:id="lblSoPhanDD14" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1040.0" layoutY="199.0" prefHeight="17.0" prefWidth="78.0" text="0" />
+      <Label fx:id="lblSoPhanDD21" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1040.0" layoutY="222.0" prefHeight="17.0" prefWidth="78.0" text="0" />
+      <Label fx:id="lblSoPhanDD28" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1040.0" layoutY="244.0" prefHeight="17.0" prefWidth="78.0" text="0" />
+      <Label layoutX="766.0" layoutY="286.0" text="Nhận xét xu hướng:" />
       <ImageView fx:id="imgHinhAnhMA" fitHeight="143.0" fitWidth="200.0" layoutX="26.0" layoutY="419.0" pickOnBounds="true" preserveRatio="true" />
-      <Label fx:id="lblDoanhThuMon7" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1142.0" layoutY="146.0" prefHeight="17.0" prefWidth="105.0" text="99.999.999.999 Đ" />
-      <Label fx:id="lblDoanhThuMon14" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1142.0" layoutY="169.0" prefHeight="17.0" prefWidth="105.0" text="99.999.999.999 Đ" />
-      <Label fx:id="lblDoanhThuMon21" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1142.0" layoutY="192.0" prefHeight="17.0" prefWidth="105.0" text="99.999.999.999 Đ" />
-      <Label fx:id="lblDoanhThuMon28" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1142.0" layoutY="214.0" prefHeight="17.0" prefWidth="105.0" text="99.999.999.999 Đ" />
-      <Label alignment="CENTER_RIGHT" layoutX="1040.0" layoutY="120.0" prefHeight="17.0" prefWidth="78.0" text="Số phần" />
-      <Label alignment="CENTER_RIGHT" layoutX="1170.0" layoutY="120.0" prefHeight="17.0" prefWidth="78.0" text="Doanh thu" textAlignment="RIGHT" />
+      <Label fx:id="lblDoanhThuMon7" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1142.0" layoutY="176.0" prefHeight="17.0" prefWidth="105.0" text="0" />
+      <Label fx:id="lblDoanhThuMon14" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1142.0" layoutY="199.0" prefHeight="17.0" prefWidth="105.0" text="0" />
+      <Label fx:id="lblDoanhThuMon21" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1142.0" layoutY="222.0" prefHeight="17.0" prefWidth="105.0" text="0" />
+      <Label fx:id="lblDoanhThuMon28" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1142.0" layoutY="244.0" prefHeight="17.0" prefWidth="105.0" text="0" />
+      <Label alignment="CENTER_RIGHT" layoutX="1040.0" layoutY="150.0" prefHeight="17.0" prefWidth="78.0" text="Số phần" />
+      <Label alignment="CENTER_RIGHT" layoutX="1170.0" layoutY="150.0" prefHeight="17.0" prefWidth="78.0" text="Doanh thu" textAlignment="RIGHT" />
       <Label layoutX="237.0" layoutY="419.0" text="Mã món ăn" />
       <Label layoutX="459.0" layoutY="419.0" text="Tên món ăn" />
-      <Label layoutX="237.0" layoutY="450.0" text="Số người / phần" />
+      <Label layoutX="237.0" layoutY="456.0" text="Số người / phần" />
       <Label layoutX="236.0" layoutY="479.0" text="Nguyên liệu" />
       <Label layoutX="30.0" layoutY="569.0" text="Mô tả món ăn" />
       <TextField fx:id="txtMaMA" editable="false" layoutX="345.0" layoutY="415.0" prefHeight="25.0" prefWidth="105.0" />
-      <TextField fx:id="txtTenMA" editable="false" layoutX="567.0" layoutY="415.0" prefHeight="25.0" prefWidth="171.0" />
-      <TextField fx:id="txtSoNguoi" editable="false" layoutX="345.0" layoutY="446.0" prefHeight="25.0" prefWidth="106.0" />
+      <TextField fx:id="txtTenMA" editable="false" layoutX="546.0" layoutY="415.0" prefHeight="31.0" prefWidth="171.0" />
+      <TextField fx:id="txtSoNguoi" editable="false" layoutX="345.0" layoutY="452.0" prefHeight="25.0" prefWidth="106.0" />
       <TextArea fx:id="txtNguyenLieu" editable="false" layoutX="237.0" layoutY="505.0" prefHeight="56.0" prefWidth="381.0" wrapText="true" />
       <TextArea fx:id="txtMoTaMA" editable="false" layoutX="29.0" layoutY="590.0" prefHeight="80.0" prefWidth="591.0" wrapText="true" />
-      <Label layoutX="459.0" layoutY="450.0" text="Đơn giá hiện tại" />
-      <TextField fx:id="txtDonGia" editable="false" layoutX="567.0" layoutY="446.0" />
-      <Label layoutX="722.0" layoutY="449.0" text="Đ" />
-      <TextArea fx:id="txtXuHuongAuto" editable="false" layoutX="766.0" layoutY="275.0" prefHeight="68.0" prefWidth="485.0" wrapText="true" />
+      <Label layoutX="459.0" layoutY="456.0" text="Đơn giá hiện tại" />
+      <TextField fx:id="txtDonGia" editable="false" layoutX="567.0" layoutY="452.0" prefHeight="31.0" prefWidth="150.0" />
+      <Label layoutX="722.0" layoutY="455.0" text="Đ" />
+      <TextArea fx:id="txtXuHuongAuto" editable="false" layoutX="766.0" layoutY="313.0" prefHeight="68.0" prefWidth="485.0" wrapText="true" />
       <Button fx:id="btnXuatExcel" layoutX="938.0" layoutY="647.0" mnemonicParsing="false" onAction="#xuatFileExcel" prefHeight="25.0" prefWidth="205.0" text="Xuất báo cáo ra file Excel" />
    </children>
 </AnchorPane>
