--- a/src/view/DatBanKhachVangLaiManager.fxml
+++ b/src/view/DatBanKhachVangLaiManager.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="678.0" prefWidth="1274.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DatBanKhachVangLaiController">
+<AnchorPane prefHeight="678.0" prefWidth="1274.0" AnchorPane.topAnchor="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DatBanKhachVangLaiController">
    <children>
       <Label layoutX="30.0" layoutY="78.0" prefHeight="27.0" prefWidth="156.0" text="Tên khách hàng">
          <font>
@@ -185,7 +185,7 @@
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btnHuy" mnemonicParsing="false" onAction="#dongGiaoDien" prefHeight="47.0" prefWidth="70.0" text="Hủy">
+                  <Button fx:id="btnHuy" mnemonicParsing="false" visible="false" onAction="#dongGiaoDien" prefHeight="47.0" prefWidth="70.0" text="Hủy">
                      <font>
                         <Font size="18.0" />
                      </font>
