--- a/src/view/QuanLyKhachHangManager.fxml
+++ b/src/view/QuanLyKhachHangManager.fxml
@@ -122,9 +122,9 @@
             <Font size="18.0" />
          </font>
       </Button>
-      <Button layoutX="295.0" layoutY="508.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="241.0" text="Xem thống kê doanh thu của khách hàng đang chọn" textAlignment="CENTER" visible="false" wrapText="true">
+      <Button fx:id="btnDatBanKhachHang" layoutX="295.0" layoutY="508.0" mnemonicParsing="false" onAction="#datBanKhachHang" prefHeight="62.0" prefWidth="241.0" text="Đặt bàn với khách hàng này" textAlignment="CENTER" wrapText="true">
          <font>
-            <Font size="16.0" />
+            <Font size="14.0" />
          </font>
       </Button>
       <Label layoutX="30.0" layoutY="449.0" text="(sử dụng trên web)" />
