--- a/src/view/ThongKeDoanhThuTheoNgay.fxml
+++ b/src/view/ThongKeDoanhThuTheoNgay.fxml
@@ -26,7 +26,7 @@
             <Font size="18.0" />
          </font></CheckBox>
       <Label layoutX="29.0" layoutY="143.0" text="Hay tìm các bàn được đặt:" visible="false" />
-      <Label layoutX="803.0" layoutY="145.0" text="Tổng doanh thu">
+      <Label layoutX="803.0" layoutY="139.0" text="Tổng doanh thu">
          <font>
             <Font size="18.0" />
          </font></Label>
@@ -42,15 +42,15 @@
          <font>
             <Font size="18.0" />
          </font></Label>
-      <Label layoutX="803.0" layoutY="291.0" text="Bàn đặt có doanh thu thấp nhất">
+      <Label layoutX="803.0" layoutY="358.0" text="Bàn đặt có doanh thu thấp nhất">
          <font>
             <Font size="18.0" />
          </font></Label>
-      <Label fx:id="lblDoanhThuThapNhat" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1098.0" layoutY="287.0" prefHeight="27.0" prefWidth="156.0" text="0 Đ">
+      <Label fx:id="lblDoanhThuThapNhat" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1098.0" layoutY="354.0" prefHeight="27.0" prefWidth="156.0" text="0 Đ">
          <font>
             <Font size="18.0" />
          </font></Label>
-      <Button fx:id="btnDong" layoutX="993.0" layoutY="355.0" mnemonicParsing="false" onAction="#dongGiaoDien" prefHeight="52.0" prefWidth="142.0" text="Đóng" textAlignment="CENTER" wrapText="true">
+      <Button fx:id="btnDong" layoutX="956.0" layoutY="459.0" mnemonicParsing="false" onAction="#dongGiaoDien" prefHeight="52.0" prefWidth="142.0" text="Đóng" textAlignment="CENTER" wrapText="true">
          <font>
             <Font size="18.0" />
          </font>
@@ -99,5 +99,15 @@
          <font>
             <Font size="18.0" />
          </font></Label>
+      <Button fx:id="btnMaxBan" layoutX="1005.0" layoutY="289.0" mnemonicParsing="false" onAction="#findBan" prefHeight="17.0" prefWidth="253.0" text="Tìm bàn này trong bảng" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <Button fx:id="btnMinBan" layoutX="1005.0" layoutY="385.0" mnemonicParsing="false" onAction="#findBan" prefHeight="17.0" prefWidth="253.0" text="Tìm bàn này trong bảng" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
