--- a/src/view/QuanLyKhachHangManager.fxml
+++ b/src/view/QuanLyKhachHangManager.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -117,16 +118,20 @@
             <Font name="System Italic" size="15.0" />
          </font>
       </Label>
-      <Button fx:id="btnThemKhachHang" layoutX="29.0" layoutY="508.0" mnemonicParsing="false" onAction="#taoKhachHangMoi" prefHeight="62.0" prefWidth="241.0" text="Thêm khách hàng mới" wrapText="true">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <Button fx:id="btnDatBanKhachHang" layoutX="295.0" layoutY="508.0" mnemonicParsing="false" onAction="#datBanKhachHang" prefHeight="62.0" prefWidth="241.0" text="Đặt bàn với khách hàng này" textAlignment="CENTER" wrapText="true">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Button>
+      <Group layoutX="29.0" layoutY="508.0" AnchorPane.leftAnchor="29.0">
+         <children>
+            <Button fx:id="btnThemKhachHang" mnemonicParsing="false" onAction="#taoKhachHangMoi" prefHeight="62.0" prefWidth="241.0" text="Thêm khách hàng mới" visible="false" wrapText="true">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
+            <Button fx:id="btnDatBanKhachHang" layoutX="266.0" mnemonicParsing="false" onAction="#datBanKhachHang" prefHeight="62.0" prefWidth="241.0" text="Đặt bàn với khách hàng này" textAlignment="CENTER" wrapText="true">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+         </children>
+      </Group>
       <Label layoutX="30.0" layoutY="449.0" text="(sử dụng trên web)" />
    </children>
 </AnchorPane>
